<resources>
    <string name="app_name">InClass11</string>
    <string name="LoginButtonText">Login Button</string>
    <string name="CreateAccountButtonText">Create new account</string>
    <string name="textPassword">Password</string>
    <string name="textEmail">Email</string>
    <string name="textName">Full Name</string>
    <string name="signUpButtonText">Sign up</string>
    <string name="cancelButtonText">Cancel</string>
    <string name="addExpense">Add An Expense</string>
    <string name="expenseName">Expense Name</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="addExpenseButton">Add Expense</string>

    <string-array name="categories_array">
        <item>Groceries</item>
        <item>Invoice</item>
        <item>Transportation</item>
        <item>Shopping</item>
        <item>Rent</item>
        <item>Trips</item>
        <item>Utilities</item>
        <item>Other</item>
    </string-array>
</resources>
